--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Joint UK Land Environment Simulator Documentation</title>
         <style>
-            body { font-family : sans-serif; }
+            body { font-family : sans-serif; padding-left : 20px; }
+            .content { padding-left : 20px; }
         </style>
     </head>
     
