--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <body>
         <h1>Joint UK Land Environment Simulator (JULES) Documentation</h1>
 
+        <div class="content">
+            <h2>JULES User Guide</h2>
+            <p>Choose a version:</p>
+            <ul>
+                <li><a href="vn3.3">vn3.3</a></li>
+            </ul>
 
-        <h2>JULES User Guide</h2>
-        <p>Choose a version:</p>
-        <ul>
-            <li><a href="vn3.3">vn3.3</a></li>
-        </ul>
-
-        <h2>Coding standards</h2>
-        <ul>
-            <li><a href="coding_standards">JULES coding standards</a></li>
-        </ul>
+            <h2>Coding standards</h2>
+            <ul>
+                <li><a href="coding_standards">JULES coding standards</a></li>
+            </ul>
+        </div>
     </body>
 </html>
