Minor change to heading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Joint UK Land Environment Simulator (JULES) Documentation</h1>
 
         <div class="content">
-            <h2>JULES User Guide</h2>
+            <h2>User Guide</h2>
             <p>Choose a version:</p>
             <ul>
                 <li><a href="vn3.3">vn3.3</a></li>
