Updated the index.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <ul>
                 <li><a href="coding_standards">JULES coding standards</a></li>
             </ul>
+            <h2>Tutorials</h2>
+            <ul>
+                <li><a href="tutorial/bg_info/tutorial/fcm_fundamentals.html">Background tutorial</a></li>
+            </ul>
         </div>
     </body>
 </html>
