--- a/tutorial/bg_info/tutorial/fcm_essentials.html
+++ b/tutorial/bg_info/tutorial/fcm_essentials.html
@@ -655,7 +655,7 @@ trunk/
         <code>fcm status|stat|st</code>
         <br/>
         Return the status of the local/working copy location compared to the version 
-        of the repository that we checkout out.
+        of the repository that we checked out.
         <br/>
         Next we will be making some changes to the trunk of the project esssentialsI
         <pre>
