Added the beginnger quiz.

--- a/tutorial/bg_info/tutorial_julesrose/beginner_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/beginner_quiz.html
@@ -58,10 +58,11 @@
         </nav>
         <div class="container theme-showcase" role="main">
             <div class="jumbotron">
-                <h2>Beginner Quiz - SVN/FCM/general</h2>
+                <h2>Beginner Quiz - Background/General questions</h2>
+                <p>This quiz is to help you think about JULES and highligh your areas of interest and areas that you need training in. Please send you answers to jules-support@metoffice.gov.uk .</p>
                 <ol>
                     <li>
-                        Have you used a version control system before even if it was not FCM?
+                        Do you presently run JULES in any form?
                         <ol type="A">
                             <li>Yes</li>
                             <li>No</li>
@@ -69,19 +70,23 @@
                     </li>
                     <br/>
                     <li>
-                        How often do you use FCM?
+                        Have you ever used a version control system before, even if it was not FCM?
                         <ol type="A">
-                            <li>Never/A long time ago</li>
-                            <li>Rarely</li>
-                            <li>Every few months</li>
-                            <li>Monthly</li>
-                            <li>Weekly</li>
-                            <li>Daily</li>
+                            <li>Yes</li>
+                            <li>No</li>
                         </ol>
                     </li>
                     <br/>
                     <li>
-                        How proficient at Fcm do you consider yourself?
+                        Have you ever used Rose/Cylc?
+                        <ol type="A">
+                            <li>Yes</li>
+                            <li>No</li>
+                        </ol>
+                    </li>
+                    <br/>
+                    <li>
+                        How proficient at running in JULES in any form do you consider yourself?
                         <ol type="A">
                             <li>Novice</li>
                             <li>Basic</li>
@@ -92,8 +97,9 @@
                     </li>
                     <br/>
                     <li>
-                        How confident are you at using FCM?
+                        How confident are you at running JULES for data anaylsis only (just changing values/numbers/settings and not code)?
                         <ol type="A">
+                            <li>No experience</li>
                             <li>Unconfident</li>
                             <li>Somewhat confident</li>
                             <li>Confident</li>
@@ -102,13 +108,24 @@
                     </li>
                     <br/>
                     <li>
-                        What is the most important thing about a version control system for you?
+                        How confident are you at running JULES as a developer of the code (changing the actual science of the system)?
+                        <ol type="A">
+                            <li>No experience</li>
+                            <li>Unconfident</li>
+                            <li>Somewhat confident</li>
+                            <li>Confident</li>
+                            <li>Very confident</li>
+                        </ol>
+                    </li>
+                    <br/>
+                    <li>
+                        What do you want to use JULES-Rose and FCM for?
                         <ol type="A">
                             <li>Being able to collaborate with others</li>
-                            <li>Being able to use different versions of my code</li>
-                            <li>Being able to test my code as I develop it</li>
-                            <li>Being able to develop different aspects of the code at the same time using branches</li>
-                            <li>Being able to share my code with others and merge their suggestions if approved</li>
+                            <li>Being able to use different versions of my code and/or the same code but diffferent settings in diferent runs</li>
+                            <li>Being able to test my changes as I develop</li>
+                            <li>Being able to develop/test different aspects at the same time using branches</li>
+                            <li>Being able to share my code/settings with others and merge their suggestions if approved</li>
                             <li>Being able to go revert changes if I make mistakes</li>
                             <li>Knowing that all my code is version controlled</li>
                             <li>Knowing that my code is traceable and I know which version was used for what project</li>
@@ -118,55 +135,79 @@
                         </ol>
                     </li>
                     <br/>
-                    <li>
-                        Which statement is correct?
+                    <li>What area(s) of JULES are you interested in?
                         <ol type="A">
-                            <li>Version control is part of FCM</li>
-                            <li>Fcm is part of Version control</li>
-                            <li>Fcm is a built on subversion control (svn) which is part of a Version control system</li>
-                            <li>Fcm is an alternative to subversion control (svn) and is part of a Version control system</li>
+                            <li>Carbon budget</li>
+                            <li>Hydrology</li>
+                            <li>Radiation</li>
+                            <li>Snow</li>
+                            <li>Vegetation</li>
+                        </ol>
+                    </li>
+                    </br>
+                    <li>How will/are you using JULES? 
+                        <ol type="A">
+                            <li>Code development for research only</li>
+                            <li>Code development for committing to the respository</li>
+                            <li>Code development, all aspects</li>
+                            <li>Testing different values and settings for research science only </li>
+                            <li>Testing different values and settings for ideal Scientific configurations</li>
+                            <li>Research only</li>
+                            <li>All aspects of JULES research and development</li>
+                        </ol>
+                    </li>
+                    </br>
+                    <li>
+                        What times scales are you interested in?
+                        <ol type="A">
+                            <li>Climate monthly</li>
+                            <li>Climate seasonal</li>
+                            <li>Climiate yearly</li>
+                            <li>Climate 10's of years</li>
+                            <li>Climate 100's of years</li>
+                            <li>Numerial Weather Prediction (NWP) diaunal</li>
+                            <li>NWP</li>
+                            <li>All of the above</li>
+                            <li>Other:</li>
                         </ol>
                     </li>
                     <br/>
                     <li>
-                        What types of files are ideal for version control?
+                        What size area(s) are you interested in?
                         <ol type="A">
-                            <li>ascii</li>
-                            <li>all</li>
-                            <li>binary</li>
-                            <li>Don't know</li>
+                            <li>Global</li>
+                            <li>Single point</li>
+                            <li>Small box area</li>
+                            <li>Grid points</li>
                         </ol>
                     </li>
                     <br/>
                     <li>
-                        What is the file size limit for a Fcm commit to a repository?
+                         What resolutions are you interested in?
+                         <ol type="A">
+                             <li>0.5 degree</li>
+                             <li>1 km </li>
+                             <li>Don't know</li>
+                             <li>Other:</li>
+                         </ol>
+                    </li>
+                    <br/>
+                    <li>What do you think the advantages are to using version control?
                         <ol type="A">
-                            <li>1 MB</li>
-                            <li>10 MB</li>
-                            <li>100 MB</li>
-                            <li>1000 MB</li>
                         </ol>
                     </li>
                     <br/>
-                    <li>
-                        Which of these statements is not true?
+                    <li>What do you think the advantages are to using Rose/Cylc to run trials (suites)?
                         <ol type="A">
-                            <li>In Fcm you can revert a local change</li>
-                            <li>In Fcm you cannot revert a local change</li>
-                            <li>In Fcm you can merge in the changes from the trunk into a branch</li>
-                            <li>In Fcm you can merge in the changes from the trunk to your local copy</li>
                         </ol>
-                    </li>
-                    <br/>
-                    <li>
-                        Which solution would be best for the problem: Six people are working on code in a version controlled repository, one wishes to try some changes that they dismiss if the test provide a negative impact.
-                        <ol type="A">
-                            <li>Make new folder outside of the repository and do all testing outside of version control</li>
-                            <li>Make changes in the local copy of the branch</li>
-                            <li>Branch from the trunk and make changes</li>
-                            <li>Branch from the trunk and switch to the branch to make changes</li>
-                        </ol>
-                    </li>
+                     </li>
+                     <br/> 
+                     <li>What do you think will be your greatest challenge with using version control and/or Rose/Cylc for JULES?
+                         <ol type="A">
+                         </ol>
+                     </li>
+                     <br/>
+
                 </ol>
             </div>
             <br/>
