From the source.

--- a/tutorial/bg_info/tutorial/fundamentals_quiz.html
+++ b/tutorial/bg_info/tutorial/fundamentals_quiz.html
@@ -81,7 +81,7 @@
                     </li>
                     <br/>
                     <li>
-                        How proficient at Fcm do you consider yourself?
+                        How proficient at FCM do you consider yourself?
                         <ol type="A">
                             <li>Novice</li>
                             <li>Basic</li>
@@ -122,39 +122,19 @@
                         Which statement is correct?
                         <ol type="A">
                             <li>Version control is part of FCM</li>
-                            <li>Fcm is part of Version control</li>
-                            <li>Fcm is a built on subversion control (svn) which is part of a Version control system</li>
-                            <li>Fcm is an alternative to subversion control (svn) and is part of a Version control system</li>
-                        </ol>
-                    </li>
-                    <br/>
-                    <li>
-                        What types of files are ideal for version control?
-                        <ol type="A">
-                            <li>ascii</li>
-                            <li>all</li>
-                            <li>binary</li>
-                            <li>Don't know</li>
-                        </ol>
-                    </li>
-                    <br/>
-                    <li>
-                        What is the file size limit for a Fcm commit to a repository?
-                        <ol type="A">
-                            <li>1 MB</li>
-                            <li>10 MB</li>
-                            <li>100 MB</li>
-                            <li>1000 MB</li>
+                            <li>FCM is part of Version control</li>
+                            <li>FCM is a built on subversion control (svn) which is part of a Version control system</li>
+                            <li>FCM is an alternative to subversion control (svn) and is part of a Version control system</li>
                         </ol>
                     </li>
                     <br/>
                     <li>
                         Which of these statements is not true?
                         <ol type="A">
-                            <li>In Fcm you can revert a local change</li>
-                            <li>In Fcm you cannot revert a local change</li>
-                            <li>In Fcm you can merge in the changes from the trunk into a branch</li>
-                            <li>In Fcm you can merge in the changes from the trunk to your local copy</li>
+                            <li>In FCM you can revert a local change</li>
+                            <li>In FCM you cannot revert a local change</li>
+                            <li>In FCM you can merge in the changes from the trunk into a branch</li>
+                            <li>In FCM you can merge in the changes from the trunk to your local copy</li>
                         </ol>
                     </li>
                     <br/>
@@ -172,9 +152,6 @@
             <br/>
             <div class="container">
                 <p><a class="btn btn-lg btn-success" href="fcm_fundamentals.html" role="button">Fundamentals</a></p>
-            </div>
-            <div class="container">
-                <p><strong>WARNING: this is a draft document it is under review awaiting approval</strong></p>
             </div>
             <hr/>
             <div class="container-fluid text-center">
