Updated to match.

--- a/tutorial/bg_info/tutorial/fcm_fundamentals.html
+++ b/tutorial/bg_info/tutorial/fcm_fundamentals.html
@@ -845,6 +845,7 @@ tutorial_repo_setup
       </div>
       <p><a class="btn btn-lg btn-success" href="essentials_quiz.html" role="button">Essentials Quiz</a></p>
       </div>
+      <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
       <hr/>
       <div class="container-fluid text-center">
       <div class="row">
