--- a/tutorial/bg_info/tutorial/fcm_links.html
+++ b/tutorial/bg_info/tutorial/fcm_links.html
@@ -77,6 +77,7 @@
                 <a href="http://furius.ca/xxdiff/doc/xxdiff-doc.html">xxdiff documentation: http://furius.ca/xxdiff/doc/xxdiff-doc.html</a>
                 <br>
             </div>
+            <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
             <hr/>
             <div class="container-fluid text-center">
                 <div class="row">
