--- a/tutorial/bg_info/tutorial/fcm_specifics.html
+++ b/tutorial/bg_info/tutorial/fcm_specifics.html
@@ -1578,6 +1578,7 @@ fcm help &lt;COMMAND&gt;
             wish to do the repository again in the future.
             <code>rm -rf ~/fcm_tutorial; rm -rf ~my_fcm_tutorial</code>
          </p>
+         <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
          <hr/>
          <div class="container-fluid text-center">
             <div class="row">
