--- a/tutorial/bg_info/tutorial/index.html
+++ b/tutorial/bg_info/tutorial/index.html
@@ -82,6 +82,7 @@
 
 
         </div>
+        <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
 
             <hr/>
             <div class="container-fluid text-center">
