--- a/tutorial/bg_info/tutorial/essentials_quiz.html
+++ b/tutorial/bg_info/tutorial/essentials_quiz.html
@@ -500,6 +500,7 @@
                 <p><a class="btn btn-lg btn-success" href="fcm_essentials.html" role="button">Essentials</a></p>
                 <br/>
             </div>
+                <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
             <hr/>
             <div class="container-fluid text-center">
                 <div class="row">
