--- a/tutorial/bg_info/tutorial/fcm_essentials.html
+++ b/tutorial/bg_info/tutorial/fcm_essentials.html
@@ -3659,6 +3659,7 @@ trunk/
       <div class="container">
       <p><a class="btn btn-lg btn-success" href="specifics_quiz.html" role="button">Specifics Quiz</a></p>
       </div>
+      <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
       <hr/>
       <div class="container-fluid text-center">
       <div class="row"><div class="col-md-12">
