--- a/tutorial/bg_info/tutorial/fcm_mqrg.html
+++ b/tutorial/bg_info/tutorial/fcm_mqrg.html
@@ -278,6 +278,7 @@ fcm resolve --accept working &lt;FILENAME&gt;
             </div>
             <br>
             <br>
+            <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
             <hr/>
             <div class="container-fluid text-center">
                 <div class="row">
