--- a/tutorial/bg_info/tutorial/fundamentals_quiz.html
+++ b/tutorial/bg_info/tutorial/fundamentals_quiz.html
@@ -153,6 +153,7 @@
             <div class="container">
                 <p><a class="btn btn-lg btn-success" href="fcm_fundamentals.html" role="button">Fundamentals</a></p>
             </div>
+            <p><strong>WARNING: this is a draft document it is under review awaiting approval and can be removed at any time</strong></p>
             <hr/>
             <div class="container-fluid text-center">
                 <div class="row">
