--- a/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
@@ -740,7 +740,7 @@ fcm co https://code.metoffice.gov.uk/svn/jules/main/trunk@vn4.7
 # change to the directory ~/jules/trunk/
 cd ~/jules/trunk/
 # run all of the rose stem tests (--group=all) and make sure it is a new run (--new)
-rose stem --new --group=all
+rose stem --new --group=all -- --hold
                             </font>
                             </pre>
                         </div>
@@ -860,20 +860,27 @@ may not have so many locations to delete any previous run's data from.
             <br/>
            Now lets explore the GUI's.
            <h3>The cylc gcylc GUI</h3>
-           <p>This should have opened up on your screen as a result of running
-              the last command.</p>
+           <p>The gcylc GUI should have opened up on your screen as a result 
+              of running the last command.</p>
+           <p>Using the option <code>-- --hold</code> tells Cylc to start the 
+              suite in the <strong>held</strong> state so we can investigate 
+              the gcylc GUI functionality.</p>
            <p>It is the suite specific Graphical User Interface for monitoring 
               the progress of your specific suite.</p>
-           <p>Note you can have multiple uniques gcylc's open for different 
+           <p>Note you can have multiple unique gcylc's open for different 
               suites.</p>
            <p>Your rose-stem gcycl GUI should look like this:</p>
-           <img src="rose_stem_gcylc.png" width="90%" id="rsg1"/>
+           <img src="images/gcylc_hold.png" width="60%" id="cghold"/>
            </br>
-           <p>Lets look at the image and try to understand it.</p>
+           <p>We will discuss the gcylc GUI before we release (play/run) the 
+              suite.<p>
+           <p>Lets look at an image of a running gcylc GUI and try to 
+              understand the differen aspects of it.</p>
+           <img src="images/rose_stem_gcylc.png" width="90%" id="rsg"/>
            <h4>Key points from the gcylc GUI</h4>
            <ol>
            <li>The square coloured blocks - theses are the currect states of the tasks
-           </br><img src="task_filtering.png" width="35%" id="tf"/></li>
+           </br><img src="images/task_filtering.png" width="35%" id="tf"/></li>
            <li>The "F" inside the square blocks - this denotes that it is a 
            family of tasks</li>
            <li>Here the Family GSWP2 and METO_LINUX_GFORTRAN_GSWP2 are expanded
@@ -882,13 +889,13 @@ may not have so many locations to delete any previous run's data from.
            <li>When a task has run you can look at its standard output via the 
            GUI by right clicking on the task name.
            For example, fcm_make_meto_xc40_cce-omp:
-           </br><img src="gcylc_investigate.png" width="90%" id="cg_invest"/>
+           </br><img src="images/gcylc_investigate.png" width="90%" id="cg_invest"/>
            </br>Then you can look at the standard out, err and interact with
            the task.</li>
            <li>We can pause or stop the suite using the buttons at the top left
            of the gcycl GUI or by selecting the <code>Control</code> tab
-           </br><img src="stop_suite.png" width="90%" id="ss"/>
-           </br><img src="stop_suite_daemon.png" width="35%" id="ssd"/>
+           </br><img src="images/stop_suite.png" width="90%" id="ss"/>
+           </br><img src="images/stop_suite_daemon.png" width="35%" id="ssd"/>
            </br>Note in the last image in the top taskbar it says:
            <code>Stop Suite Daemon vn4p7</code> this means that this panel 
            can be used to stop the suite at the location it is running using 
@@ -970,45 +977,174 @@ There are mainly reasons, for example it failed and you need to fix the error.
             <p>There is a command line equlivant, it is not as elegant: </p>
             <code>cylc scan -c</code>
             <p>It should produce something like this:</p>
-            </br><img src="cylc_scan_c.png" id="csc"/>
+            </br><img src="images/cylc_scan_c.png" id="csc"/>
             </br>
-            <h4>What if you accidenetly close the gcycl GUI?</h4>
+            <h4>What if you accidently close the gcycl GUI?</h4>
             <p>You can reopen it using:</p>
             <code>cylc gui vn4p7 #where vn4p7 is the suite id</code>
             </br>OR
             <p>You can use the cylc gscan GUI</p>
             <code>cylc gscan &amp; #&amp; background the task so you can still use your terminal</code>
             </br>
-            </br><img src="cylc_gscan.png" id="cgscan"/>
+            </br><img src="images/cylc_gscan.png" id="cgscan"/>
             </br>
             <p>Now you can double click on the suite id of the suite that you
             want to open and the gcylc GUI of that will appear.</p>
+            </br>OR
+            <p>You can use Rose to open the gcylc GUI</p>
+            <code>rose suite-gcontrol --name=SUITE-NAME</code> Or the shorthand
+            <code> rose sgc --name=SUITE-NAME</code>
+            </br>
+            <h4>How else could we look at the output from the suite?</h4>
+            <p>We already know that we can use the gcylc GUI to look at the 
+               job stderr/out by <strong>right click</strong> on a task and
+               select <strong>View</strong> and then the job stderr.
+               We may also want to look at the log file for the suite.</p>
+            <p>This can be viewed in via the gcylc GUI if there are errors.
+               If there are errors then a orange warning triagle will appear
+               in the bottom right hand corner of the screen.</p>
+            <img src="images/warning_tri.png" id="warning"/>
+            <p>Double clicking on it will open up an information box with any
+               errors from the log of the suite.</p>
+            </br>
+            <h4>Other ways of looking at information from the suite:</h4>
+            <p>We can, if it is set-up look at the information in a web 
+               browser.</p>
+            <p>This is known as <strong>rose bush</strong>.</p>
+            <p>At the Met Office the top level page looks like the image
+               below.</p>
+            <img src="images/rose_bush1.png" width="85%" id="rb1"/>
+            </br>
+            </br>
+            <p>At the Met Office the second level page looks like the image
+               below.
+               This was reached by completing the "User Id" and selecting the
+               "Suite List" button.
+               This then provides a list of the owners suites that they have 
+               run and or are running.</p>
+            <img src="images/rose_bush2.png" width="85%" id="rb2"/>
+            </br>
+            </br>
+            <p>At the Met Office the suite level page looks like the image
+               below.
+               The suite was selected by clicking on the "task jobs list" 
+               associated with the desired suite name.</p>
+            <img src="images/rose_bush3.png" width="85%" id="rb3"/>
+            </br>
+            </br>
+            <p>On the VM the suite level page looks like the image below.</p>
+            <img src="images/vm_rose_bush.png" width="85%"id="vmrb"/>
+            </br>
+            </br>
+            <p>The last two images are equlivant run on two different
+               sites/systems.</p>
+            </br>
+            <p>Depending on your site set-up there are different ways of 
+               accessing rose bush.
+               As can be seen in the above two images.
+               In an internet window if you know the path you can use that.</p>
+            <p>At command line rose bush can be invoked for a suite that you 
+               have run or is running from within the directory of the 
+               suite.</p>
+            <p><code>rose slv</code> or <code>rose suite-log --view</code> you
+               can also add the option of the <code>--name=SUITE_NAME</code>
+           </br>
+           <h4>More on Rose Bush</h4>
+            </br>
+            <p>The location of the log for the suite err and out which can be 
+            very helpful when debugging a suite.</p>
+            <img src="images/rose_bush4.png" width="85%" id="rb4"/>
+            </br>
+            </br>
+            <p>The location of the log for the Rose and other files, this can 
+            be helpful.</p>
+            <img src="images/rose_bush5.png" width="85%" id="rb5"/>
+            </br>
+            </br>
+            <p>Using the "Display Options" button to search for tasks by...
+            </br>
+            ...name (using the Task Name Glob) which means you can search for 
+            part of a name, for example *linux*
+            </br>
+            ...task status (using the Select by Job  Status drop down box),
+            allowing you to search by the status for example searching for
+            Failed tasks is often very helpful
+            </br>
+            ...the Sort Order drop down is a useful option for example looking
+            at the first failed task
+            </br>
+            ...you can combine options
+            </br>
+            ...remeber to use the "update" button to apply your requested
+             Display Options.
+            </p>
+            <img src="images/rose_bush7.png" width="85%" id="rb7"/>
+            </br>
+            </br>
+
+HEREHERE
+            <img src="images/rose_bush8.png" width="85%" id="rb8"/>
+            </br>
+            </br>
+            <p>Cycles List</p>
+            <img src="images/rose_bush6.png" width="85%" id="rb6"/>
+            </br>
+
+
+            <h4>The cylc-run directory</h4>
+
 HERE
+            <h3> Test your understanding</h3>
+            </br><img src="images/warning_tri.png" id="warning"/>
+            <p>Explain the following from the image above (moving left to right):</p>
+            <ol>
+            <li>What does the filled gray square represent?</li>
+            <li>What does the hollow purple square represent?</li>
+            <li>What does the hollow blue square represent?</li>
+            <li>What does the filled green square represent?</li>
+            <li>What does the filled red square represent?</li>
+            <li>What date was the suite last active, from the image.</li>
+            <li>What information would double clicking on the warning triangle provide?</li>
+            <li>What information would you get by hovering over a coloured square?</li>
+
+            </ol>
             <div class="panel-group" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
                         <span class="glyphicon"></span>
                         Answers
                         </a>
                     </h4>
                 </div>
-                <div id="collapseFive" class="panel-collapse collapse">
+                <div id="collapseNine" class="panel-collapse collapse">
                    <div class="panel-body">
                         <div class="row">
-                            <pre>
-                            <font color=green>
-# make the directory ~/jules/ and the path that may be required.
-                            </font>
-                            </pre>
+            <ol>
+            <li>What does the filled gray square represent?</li>
+            <font color=green>Succeeded tasks.</font>
+            <li>What does the hollow purple square represent?</li>
+            <font color=green>Filtered tasks.</font>
+            <li>What does the hollow blue square represent?</li>
+            <font color=green>Waiting tasks.</font>
+            <li>What does the filled green square represent?</li>
+            <font color=green>Running tasks.</font>
+            <li>What does the filled red square represent?</li>
+            <font color=green>Failed tasks.</font>
+            <li>What date was the suite last active, from the image.</li>
+            <font color=green>2016-05-20 at 14 hrs, 13 mins and 20 seconds in GMT+1 (BST).</font>
+            <li>What information would double clicking on the warning triangle provide?</li>
+            <font color=green>err log for the log of the suite.</font>
+            <li>What information would you get by hovering over a coloured square?</li>
+            <font color=green>How many of each tasks for each state there is.</font>
+            </ol>
                         </div>
                     </div>
                 </div>
             </div>
             <br/>
 
-    </div>
         <br/>
             <div class="panel-group" id="accordion">
             <div class="panel panel-default">
@@ -1033,6 +1169,56 @@ HERE
                 </div>
             </div>
             <br/>
+
+            <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+                        <span class="glyphicon"></span>
+                        Answers
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseFive" class="panel-collapse collapse">
+                   <div class="panel-body">
+                        <div class="row">
+                            <pre>
+                            <font color=green>
+# make the directory ~/jules/ and the path that may be required.
+                            </font>
+                            </pre>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br/>
+
+            <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+                        <span class="glyphicon"></span>
+                        Answers
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseFive" class="panel-collapse collapse">
+                   <div class="panel-body">
+                        <div class="row">
+                            <pre>
+                            <font color=green>
+# make the directory ~/jules/ and the path that may be required.
+                            </font>
+                            </pre>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br/>
+
+
         </ul>
         <br/>
 
